# artifacts/api-server/src/routes/health.ts
@@ -8,4 +8,9 @@ router.get("/healthz", (_req, res) => {
   res.json(data);
 });
 
+router.get("/health", (_req, res) => {
+  const data = HealthCheckResponse.parse({ status: "Server Running" });
+  res.json(data);
+});
+
 export default router;
